2006-06-01  Steve Ellcey  <sje@cup.hp.com>
	
	* lib/target-supports.exp (is-effective-target): Add cxa_atexit.
	(is-effective-target-keyword): Ditto.

2006-06-01  Thomas Koenig  <Thomas.Koenig@online.de>

	PR fortran/27715
	* gfortran.dg/extended_char_comparison_1.f:  New test.

2006-06-01  Paul Thomas  <pault@gcc.gnu.org>

	PR fortran/25098
	* gfortran.dg/dummy_procedure_1.f90: New test.

	PR fortran/25147
	* gfortran.dg/dummy_procedure_2.f90: New test.

	* gfortran.dg/associated_2.f90: Correct to make consistent with
	standard.

2006-05-31  Roger Sayle  <roger@eyesopen.com>

	* gcc.target/i386/387-11.c: New test case.

2006-05-31  Mark Mitchell  <mark@codesourcery.com>

	PR c++/27801
	* g++.dg/template/cond6.C: New test.

	PR c++/26496
	* g++.dg/template/crash51.C: New test.
	* g++.old-deja/g++.mike/net36.C: Tweak error markers.

	PR c++/27385
	* g++.dg/init/array20.C: New test.

2006-05-31  Roger Sayle  <roger@eyesopen.com>

	* gcc.dg/builtins-54.c: New test case.

2006-05-30  Mark Mitchell  <mark@codesourcery.com>

	PR c++/26433
	* g++.dg/template/fntry1.C: Add dg-do link.

	PR c++/27808
	* g++.dg/parse/friend6.C: New test.

2006-05-30  Asher Langton  <langton2@llnl.gov>

	* gfortran.dg/cray_pointers_7.f90: New test.

2006-05-30  Roger Sayle  <roger@eyesopen.com>

	PR tree-optimization/23452
	* gcc.dg/fold-mulconj-1.c: New test case.

2006-05-30  Mark Mitchell  <mark@codesourcery.com>

	PR c++/27803
	* g++.dg/parse/bitfield1.C: New test. 

2006-05-30  Roger Sayle  <roger@eyesopen.com>

	* gcc.target/ppc-eq0-1.c: New test case.
	* gcc.target/ppc-negeq0-1.c: New test case.

2006-05-30  Dirk Mueller  <dmueller@suse.de>

	PR c/27273
	* gcc.dg/overflow-warn-5.c: New test.

2006-05-30  Volker Reichelt  <reichelt@igpm.rwth-aachen.de>

	PR c/27718
	* gcc.dg/sizeof-1.c: New test.

2006-05-30  Uros Bizjak  <uros@kss-loka.si>

	PR target/27790
	* gcc.target/i386/pr27790.c: New test.

2006-05-29  Jerry DeLisle  <jvdelisle@gcc.gnu.org>

	PR libgfortran/27757