@@ -1,4 +1,4 @@
-// { dg-do run }
+// { dg-do run { xfail { ! cxa_atexit } } }
 // Objects must be destructed in decreasing cnt order
 // Original test attributed to James Kanze <jkanze@otelo.ibmmail.com>
 
